<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaLogin"
    android:orientation="horizontal"
    android:background="@color/white">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="137dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icone" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/poppins"
        android:text="@string/bem_vindo"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="417dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            style="@style/input_entrada"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/editTextTextPassword"
            style="@style/input_entrada"
            android:layout_marginTop="20dp"
            android:hint="@string/senha"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/recuperar_minha_senha"
            android:textAlignment="textEnd"
            android:textColor="@color/gray" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            style="@style/Bt_grande_start"
            android:layout_marginTop="19dp"
            android:text="@string/login"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            style="@style/Bt_grande_branco"
            android:layout_marginTop="20dp"
            android:onClick="gotoTelaCadastro"
            android:text="@string/bt_criar_conta"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>